--- a/my-backend/src/main/resources/application.yml
+++ b/my-backend/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     test-connection: 'false'
     password: ${MAIL_PASSWORD:}
     port: ${MAIL_PORT:0}
+
   security:
     oauth2:
       client:
@@ -29,18 +30,18 @@ spring:
             client-id: ${KAKAO_CLIENT_ID}
             scope: profile_nickname,account_email
             client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8888/login/oauth2/code/kakao
+            redirect-uri: https://hwiyeong.shop/login/oauth2/code/kakao
             client-name: Kakao
           naver:
             client-id: ${NAVER_CLIENT_ID}
-            redirect-uri: http://localhost:8888/login/oauth2/code/naver
+            redirect-uri: https://hwiyeong.shop/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name,email
             client-secret: ${NAVER_CLIENT_SECRET}
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: http://localhost:8888/login/oauth2/code/google
+            redirect-uri: https://hwiyeong.shop/login/oauth2/code/google
             scope: profile,email
         provider:
           naver:
@@ -53,6 +54,7 @@ spring:
             user-name-attribute: id
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -61,19 +63,35 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: 'true'
     open-in-view: 'false'
+
   application:
     name: my-backend
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://${DB_HOST:mariadb}:${DB_PORT:3306}/hotel?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&allowMultiQueries=true
+    url: jdbc:mariadb://${DB_HOST:mariadb}:${DB_PORT:3306}/hotel?useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: ${DB_USERNAME:night}
     password: ${DB_PASSWORD:night}
+
   servlet:
     multipart:
       max-request-size: 5MB
       max-file-size: 5MB
+
   config:
     import: optional:file:.env[.properties]
+
+  mvc:
+    cors:
+      mappings:
+        # 모든 API 경로에 CORS 적용
+        "[/api/**]":
+          allowed-origins: ${CORS_ALLOWED_ORIGINS:https://hwiyeong.shop,http://localhost:5173}
+          allowed-methods: GET,POST,PUT,PATCH,DELETE,OPTIONS
+          allowed-headers: "*"
+          exposed-headers: Authorization,Set-Cookie
+          allow-credentials: true
+          max-age: 3600
 
 logging:
   level:
@@ -85,17 +103,17 @@ logging:
 file:
   upload:
     dir: uploads
-    url: http://localhost:8888/uploads
+    url: https://hwiyeong.shop/uploads
   upload-dir: ./uploads
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration: '86400000'
+  expiration: 86400000   # 24h (ms) - 숫자(long)로
 
 server:
   port: '8888'
+  forward-headers-strategy: framework
 
-# ──[ADDED] Prometheus/Actuator 노출 설정 ───────────────────────────────
 management:
   endpoints:
     web:
@@ -108,10 +126,3 @@ management:
     export:
       prometheus:
         enabled: true
-# ───────────────────────────────────────────────────────────────────────
-
-# ──[ADDED] CORS 설정 (AWS 배포용) ────────────────────────────────────
-cors:
-  allowed:
-    origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173}
-# ───────────────────────────────────────────────────────────────────────
