--- a/my-backend/src/main/resources/application.yml
+++ b/my-backend/src/main/resources/application.yml
@@ -1,24 +1,20 @@
 spring:
   mail:
+    host: ${MAIL_HOST:smtp.sendgrid.net}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:apikey}
+    password: ${MAIL_PASSWORD:}
+    protocol: smtp
     properties:
       mail:
         smtp:
-          ssl:
-            trust: smtp.gmail.com
-            enable: 'false'
+          auth: true
           starttls:
-            enable: ${MAIL_SMTP_STARTTLS_ENABLE:false}
-            required: 'true'
-          auth: ${MAIL_SMTP_AUTH:false}
-          connectiontimeout: '5000'
-          writetimeout: '5000'
-          timeout: '3000'
-    username: ${MAIL_USERNAME:}
-    host: ${MAIL_HOST:}
-    protocol: smtp
-    test-connection: 'false'
-    password: ${MAIL_PASSWORD:}
-    port: ${MAIL_PORT:0}
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          writetimeout: 5000
+          timeout: 5000
 
   security:
     oauth2:
@@ -78,6 +74,10 @@ spring:
       max-request-size: 5MB
       max-file-size: 5MB
 
+  web:
+    resources:
+      static-locations: file:/opt/my-backend/uploads/
+
   config:
     import: optional:file:.env[.properties]
 
@@ -92,6 +92,9 @@ spring:
           exposed-headers: Authorization,Set-Cookie
           allow-credentials: true
           max-age: 3600
+
+mail:
+  from: ${MAIL_FROM:spvkf9030@gmail.com}
 
 logging:
   level:
